--- a/css/style.css
+++ b/css/style.css
@@ -259,6 +259,8 @@ h6,
     display: flex;
     align-items: center;
     justify-content: center;
+    
+   
 }
 
 .facility-item .facility-icon::before {
@@ -268,9 +270,10 @@ h6,
     height: 100%;
     top: 0;
     left: 0;
-    background: rgba(255, 255, 255, .9);
+    background: rgba(253, 252, 252, 0.9);
     transition: .5s;
     z-index: 1;
+    
 }
 
 .facility-item .facility-icon span {
@@ -281,16 +284,19 @@ h6,
     top: 0;
     left: 0;
     border-radius: 50%;
+ 
 }
 
 .facility-item .facility-icon span:last-child {
     left: auto;
     right: 0;
+    
 }
 
 .facility-item .facility-icon i {
     position: relative;
     z-index: 2;
+    
 }
 
 .facility-item .facility-text {
@@ -302,6 +308,7 @@ h6,
     text-align: center;
     justify-content: center;
     flex-direction: column;
+    
 }
 
 .facility-item .facility-text::before {
@@ -311,9 +318,10 @@ h6,
     height: 100%;
     top: 0;
     left: 0;
-    background: rgba(255, 255, 255, .9);
+    background: rgba(255, 255, 255, 0.9);
     transition: .5s;
     z-index: 1;
+    
 }
 
 .facility-item .facility-text * {
@@ -323,7 +331,7 @@ h6,
 
 .facility-item:hover .facility-icon::before,
 .facility-item:hover .facility-text::before {
-    background: rgba(255, 255, 255, .9);
+    background: rgba(250, 250, 250, 0.9);
 }
 
 .facility-item:hover * {
